# codex-usage

./: Cargo.toml  README.md
src/: main.rs
