[package]
name = "codex-usage"
version = "0.1.0"
edition = "2021"
description = "Check your ChatGPT/Codex plan usage limits from the terminal"

[[bin]]
name = "codex-usage"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
